# harmony_use_video

./: .gitignore  App.tsx  GTM.js  README.md  app.json  diff.ppk-patch  package.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/debug/java/com/harmony_use_webview/: ReactNativeFlipper.java
android/app/src/main/java/com/harmony_use_webview/: MainActivity.java  MainApplication.java
android/app/src/main/res/values/: strings.xml
android/app/src/release/java/com/harmony_use_webview/: ReactNativeFlipper.java
harmony/: build-profile.json5
harmony/entry/: oh-package-lock.json5  oh-package.json5
harmony/entry/src/main/cpp/: CMakeLists.txt  PackageProvider.cpp
harmony/entry/src/main/ets/: RNPackagesFactory.ts
harmony/entry/src/main/ets/pages/: Index.ets
ios/: Podfile
ios/harmony_use_webview/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/harmony_use_webview.xcodeproj/: project.pbxproj
ios/harmony_use_webview.xcodeproj/xcshareddata/xcschemes/: harmony_use_webview.xcscheme
ios/harmony_use_webviewTests/: harmony_use_webviewTests.m
patches/: @react-native-oh-tpl+react-native-video+5.2.1-0.2.32.patch
